Made changes so that main is 100% width

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -19,8 +19,8 @@ $theme := {
   gameOrangeLight: #feb96b
   gamePinkDark: #c659ff
   gamePinkLight: #fd81bf
-  gameGreenDark: #3bbed6
-  gameGreenBlue: #02d7a5
+  gameGreenBlue: #3bbed6
+  gameGreenMain: #02d7a5
 }
 
 @import '../../node_modules/vuetify/src/stylus/main'
