Font Raleway, mock data for components, new align

--- a/src/assets/styles/core/palette.scss
+++ b/src/assets/styles/core/palette.scss
@@ -45,6 +45,10 @@ $palette-colors: (
     dark: #9494a4,
     x-dark: #e2e4ee,
     logos: #f1f1f4
+  ),
+  naval: (
+    base: #35637f,
+    light: #3b656e
   )
 );
 
