Changes in palette - wrong colors in components

--- a/src/assets/styles/core/palette.scss
+++ b/src/assets/styles/core/palette.scss
@@ -36,7 +36,7 @@ $palette-colors: (
     light: #081351,
     base: #060a34,
     dark: #040629
-  )
+  ),
   pink: (
     light: #e0358e,
     base: #bf2e8c,
