Mock design and data for activity history

--- a/src/assets/styles/core/palette.scss
+++ b/src/assets/styles/core/palette.scss
@@ -16,9 +16,9 @@ $palette-colors: (
   white: (
     x-light: #e7e7ec,
     light: #f6f6f6,
-    light-dark: #c1c1d0,
+    light-dark: #ddd,
     base: #fff,
-    mid-dark: #eaeaea,
+    mid-dark: #c1c1d0,
     dark: #9494a4,
     x-dark: #e2e4ee,
     logos: #f1f1f4
